--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,31 @@
 <%- include('./partials/head') %>
 
-<article>
-  <h1>Hallo wereld!</h1>
-  <p>Alles werk! Laat dit visitekaartje in je browser aan een docent zien :D</p>
-</article>
+<div class="card1">
+  <article>
+    <header>
+      <h1>Tim Oosterveer</h1>
+    </header>
+    <img src="./assets/IMG_1092.jpg" alt="" />
+    <!-- <hover> -->
+    <button onclick="myFunction()">Click Me</button>
+    <!-- </hover> -->
+  </article>
+</div>
+<div id="card2">
+  <section>
+    <header>
+      <!-- <h2>Info</h2> -->
+      <p>
+        Hi! Leuk dat je hier kijkt<br />
+        ik ben Tim, 22 jaar oud en kom uit Lisserbroek <br />
+        mijn vooropleiding was in de autotechniek, dus dit is een totaal nieuwe
+        uitdaging<br />
+        ambitie is om een goede frontender te worden en misschien later een combi met
+        autotechniek <br />
+        in het weekend ben ik vaak aan het zweefvliegen of kitesurfen
+      </p>
+    </header>
+  </section>
+</div>
 
 <%- include('./partials/foot') %>
