--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,8 @@
-* {
+/* * {
   box-sizing: border-box;
   margin: 0;
-}
-body {
+} */
+/* body {
   width: 100vw;
   height: 100vh;
   font-family: Helvetica, Arial, sans-serif;
@@ -11,9 +11,17 @@ body {
   justify-content: center;
   align-items: center;
   background: rgba(188, 105, 138, 0.5);
-  background-image: radial-gradient(circle at bottom left, rgba(255, 255, 0, 0.9), rgba(255, 255, 0, 0) 70%),
+  background-image: radial-gradient(
+      circle at bottom left,
+      rgba(255, 255, 0, 0.9),
+      rgba(255, 255, 0, 0) 70%
+    ),
     radial-gradient(circle at top left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0) 70%),
-    radial-gradient(circle at center right, rgba(255, 0, 255, 0.8), rgba(255, 0, 255, 0) 50%);
+    radial-gradient(
+      circle at center right,
+      rgba(255, 0, 255, 0.8),
+      rgba(255, 0, 255, 0) 50%
+    );
   background-size: 200% 200%;
   animation: movement 30s ease infinite alternate-reverse;
 }
@@ -34,23 +42,158 @@ body {
   100% {
     background-position: 100% 100%;
   }
+} */
+
+* {
+  margin: 0;
+}
+
+html {
+  height: 100vh;
+}
+
+body {
+  height: 100vh;
+  font-family: open sans;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #46598d;
+  background-color: bisque;
 }
 
 article {
+  width: 200vw;
+  max-width: 30em;
+  height: 90vh;
+  /* min-width: 20em; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  background: rgb(44, 29, 17);
+  box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  position: relative;
+  transition: 0.25s;
+  margin: 25px 15px 25px 15px;
+}
+
+#card2 {
+  display: none;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+
+h1 {
+  font-size: 30px;
+  margin: 3rem 0 5rem;
+  color: rgb(233, 242, 196);
+  margin-bottom: 5vh;
+  font-family: monospace;
+}
+
+img {
+  width: 25%;
+  height: 25%;
+  border-radius: 20%;
+  border: 2px solid;
+  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
+  position: relative;
+  top: 1rem;
+  transition: 0.25s 0.15s;
+  margin-bottom: 30vh;
+  object-fit: cover;
+}
+
+button {
+  margin-bottom: 10vh;
+  font-size: 2vh;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border-radius: 1vh;
+  color: rgb(0, 0, 0);
+  background-color: rgb(249, 249, 249);
+}
+
+section {
+  width: 200vw;
+  max-width: 30em;
+  height: 90vh;
+  min-width: 20em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgb(44, 29, 17);
+  box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 1rem;
+  position: relative;
+  transition: 0.25s;
+  padding: 2%;
+}
+
+p {
+  font-size: 15px;
+  font-family: monospace;
+  max-width: 45vh;
+  text-align: center;
+  line-height: 2;
+  color: white;
+  margin-bottom: 1px;
+  margin-top: 5px;
+  padding: 5% 20% 2% 20%;
+  border-style: inset;
+  word-spacing: 5px;
+  border-radius: 1rem;
+}
+
+button:hover {
+  color: rgb(31, 131, 208);
+}
+
+@media screen and (max-width: 612px) {
+  body {
+    width: 25em;
+  }
+
+  article {
+    height: 10%;
+  }
+
+  .card1 {
+    display: flex;
+    align-items: flex-start;
+    padding-left: -100px;
+    width: 350px;
+  }
+
+  img {
+    width: 100px;
+    height: 150px;
+  }
+
+  #card2 {
+    width: 10%;
+  }
+}
+
+/* article {
   padding: 1rem;
   width: 40vw;
   height: 22vw;
   color: white;
 
-  /* From https://css.glass */
   background: rgba(255, 255, 255, 0.06);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5.8px);
   -webkit-backdrop-filter: blur(5.8px);
   border: 1px solid rgba(255, 255, 255, 0.27);
-}
-
-h1 {
-  text-align: center;
-}
+} */
