--- a/public/style.css
+++ b/public/style.css
@@ -1,199 +1,112 @@
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-} */
-/* body {
-  width: 100vw;
-  height: 100vh;
-  font-family: Helvetica, Arial, sans-serif;
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  background: rgba(188, 105, 138, 0.5);
-  background-image: radial-gradient(
-      circle at bottom left,
-      rgba(255, 255, 0, 0.9),
-      rgba(255, 255, 0, 0) 70%
-    ),
-    radial-gradient(circle at top left, rgba(255, 0, 0, 1), rgba(255, 0, 0, 0) 70%),
-    radial-gradient(
-      circle at center right,
-      rgba(255, 0, 255, 0.8),
-      rgba(255, 0, 255, 0) 50%
-    );
-  background-size: 200% 200%;
-  animation: movement 30s ease infinite alternate-reverse;
-}
-
-@keyframes movement {
-  0% {
-    background-position: 0% 0%;
-  }
-  25% {
-    background-position: 50% 0%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  75% {
-    background-position: 50% 100%;
-  }
-  100% {
-    background-position: 100% 100%;
-  }
-} */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
 }
 
-html {
-  height: 100vh;
+:root {
+  --background-color: #001524;
+  --background-color-two: #d6d6d6;
+  --card-colour: #cf4325;
+  --card-colour-two: #15616d;
+  --card-colour-three: #9381ff;
 }
 
 body {
+  background-color: var(--background-color-two);
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
   height: 100vh;
-  font-family: open sans;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #46598d;
-  background-color: bisque;
+  width: 100%;
 }
 
-article {
-  width: 200vw;
-  max-width: 30em;
-  height: 90vh;
-  /* min-width: 20em; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  background: rgb(44, 29, 17);
-  box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 1rem;
+.container {
   position: relative;
-  transition: 0.25s;
-  margin: 25px 15px 25px 15px;
+  margin: 0 auto;
+  height: 80%;
+  width: 30vw;
+  top: 10%;
 }
 
-#card2 {
-  display: none;
+.card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: all 0.5s;
+  transition: 1.5s;
 }
 
-header {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  justify-content: flex-end;
-  margin-bottom: 20px;
+.card-flip {
+  transform: rotateY(180deg);
+  transition: 1.5s;
 }
 
-h1 {
-  font-size: 30px;
-  margin: 3rem 0 5rem;
-  color: rgb(233, 242, 196);
-  margin-bottom: 5vh;
-  font-family: monospace;
+.front {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: var(--card-colour);
+  border-radius: 0.6rem;
+  overflow: hidden;
+  perspective: 1500px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-img {
-  width: 25%;
-  height: 25%;
-  border-radius: 20%;
-  border: 2px solid;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.2);
-  position: relative;
-  top: 1rem;
-  transition: 0.25s 0.15s;
-  margin-bottom: 30vh;
-  object-fit: cover;
+.back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  background-color: var(--card-colour-two);
+  transform: rotateY(180deg);
+  border-radius: 0.6rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
-button {
-  margin-bottom: 10vh;
-  font-size: 2vh;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  border-radius: 1vh;
-  color: rgb(0, 0, 0);
-  background-color: rgb(249, 249, 249);
-}
-
-section {
-  width: 200vw;
-  max-width: 30em;
-  height: 90vh;
-  min-width: 20em;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background: rgb(44, 29, 17);
-  box-shadow: 0 0 20px 20px rgba(0, 0, 0, 0.1);
-  border-radius: 1rem;
-  position: relative;
-  transition: 0.25s;
-  padding: 2%;
-}
-
-p {
-  font-size: 15px;
-  font-family: monospace;
-  max-width: 45vh;
+.marquee {
+  color: var(--background-color-two);
+  display: inline-block;
+  animation: to-the-left 20s linear infinite;
   text-align: center;
-  line-height: 2;
-  color: white;
-  margin-bottom: 1px;
-  margin-top: 5px;
-  padding: 5% 20% 2% 20%;
-  border-style: inset;
-  word-spacing: 5px;
-  border-radius: 1rem;
+  white-space: nowrap;
+  padding-left: 100%;
+  margin-top: 5%;
 }
 
-button:hover {
-  color: rgb(31, 131, 208);
+.marquee span {
+  font-size: 2em;
+  font-weight: bold;
+  padding-left: 2rem;
 }
 
-@media screen and (max-width: 612px) {
-  body {
-    width: 25em;
-  }
-
-  article {
-    height: 10%;
-  }
-
-  .card1 {
-    display: flex;
-    align-items: flex-start;
-    padding-left: -100px;
-    width: 350px;
-  }
-
-  img {
-    width: 100px;
-    height: 150px;
-  }
-
-  #card2 {
-    width: 10%;
-  }
+.logo {
+  font-size: 5rem;
+  transform: rotate(50deg);
+  margin-top: 10rem;
 }
 
-/* article {
-  padding: 1rem;
-  width: 40vw;
-  height: 22vw;
-  color: white;
+.logo span {
+  color: var(--background-color);
+}
 
-  background: rgba(255, 255, 255, 0.06);
-  border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5.8px);
-  -webkit-backdrop-filter: blur(5.8px);
-  border: 1px solid rgba(255, 255, 255, 0.27);
-} */
+svg {
+  width: 60vw;
+  transition: 0.5s;
+}
+
+svg:hover {
+  scale: 1.2;
+  transition: 0.5s;
+}
+
+@keyframes to-the-left {
+  100% {
+    transform: translate(-100%, 0);
+  }
+}
