--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,31 +1,34 @@
 <%- include('./partials/head') %>
 
-<div class="card1">
-  <article>
-    <header>
-      <h1>Tim Oosterveer</h1>
-    </header>
-    <img src="./assets/IMG_1092.jpg" alt="" />
-    <!-- <hover> -->
-    <button onclick="myFunction()">Click Me</button>
-    <!-- </hover> -->
-  </article>
+<div class="container">
+  <div class="card">
+    <div class="front">
+      <div class="marquee">
+        <span>Tim Oosterveer - 25-09-1999 - Student - front-end-developer</span>
+        <span>Tim Oosterveer - 25-09-1999 - Student - front-end-developer</span>
+        <span>Tim Oosterveer - 25-09-1999 - Student - front-end-developer</span>
+        <span>Tim Oosterveer - 25-09-1999 - Student - front-end-developer</span>
+      </div>
+      <div class="logo">
+        <span> <%=member.name%> <%= member.surname %></span>
+      </div>
+    </div>
+    <div class="back">back</div>
+  </div>
 </div>
-<div id="card2">
-  <section>
-    <header>
-      <!-- <h2>Info</h2> -->
-      <p>
-        Hi! Leuk dat je hier kijkt<br />
-        ik ben Tim, 22 jaar oud en kom uit Lisserbroek <br />
-        mijn vooropleiding was in de autotechniek, dus dit is een totaal nieuwe
-        uitdaging<br />
-        ambitie is om een goede frontender te worden en misschien later een combi met
-        autotechniek <br />
-        in het weekend ben ik vaak aan het zweefvliegen of kitesurfen
-      </p>
-    </header>
-  </section>
-</div>
+
+<svg
+  fill="#15616d"
+  width="50px"
+  height="50px"
+  viewBox="0 0 1920 1920"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  <path
+    fill-rule="evenodd"
+    clip-rule="evenodd"
+    d="M639.999 209.777h116.019L621.665 75.425 697.09 0l263.111 263.111-260.196 260.196-75.425-75.424 131.439-131.439h-116.02c-176.731 0-320 143.269-320 320H213.332c0-235.642 191.025-426.667 426.667-426.667Zm0 643.556c0-117.82 95.512-213.333 213.333-213.333h853.338c117.82 0 213.33 95.513 213.33 213.333v853.337c0 117.82-95.51 213.33-213.33 213.33H853.332c-117.821 0-213.333-95.51-213.333-213.33V853.333Zm213.333-106.666h853.338c58.91 0 106.66 47.756 106.66 106.666v853.337c0 58.91-47.75 106.66-106.66 106.66H853.332c-58.91 0-106.667-47.75-106.667-106.66V853.333c0-58.91 47.757-106.666 106.667-106.666Z"
+  />
+</svg>
 
 <%- include('./partials/foot') %>
