--- a/public/style.css
+++ b/public/style.css
@@ -69,6 +69,12 @@ body {
     rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
+.back img {
+  border-radius: 0.3rem;
+  width: 30%;
+  margin-left: 35%;
+}
+
 .marquee {
   color: var(--background-color-two);
   display: inline-block;
@@ -86,13 +92,14 @@ body {
 }
 
 .logo {
-  font-size: 5rem;
+  font-size: 3rem;
   transform: rotate(50deg);
-  margin-top: 10rem;
+  margin-top: 12rem;
 }
 
 .logo span {
-  color: var(--background-color);
+  color: #fff;
+  white-space: nowrap;
 }
 
 svg {
