--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,12 @@
         <span>Tim Oosterveer - 25-09-1999 - Student - front-end-developer</span>
       </div>
       <div class="logo">
-        <span> <%=member.name%> <%=member.surname%></span>
+        <span><%=member.name%> <%=member.surname%></span>
       </div>
     </div>
-    <div class="back">back</div>
+    <div class="back">
+      <img src="<%=member.avatar%>" alt="" />
+    </div>
   </div>
 </div>
 
