--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,14 +12,75 @@
       <div class="logo">
         <span><%=member.name%> <%=member.surname%></span>
       </div>
+      <div class="coding">
+        <div class="html">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M6 28L4 3H28L26 28L16 31L6 28Z" fill="#E44D26" />
+            <path d="M26 5H16V29.5L24 27L26 5Z" fill="#F16529" />
+            <path
+              d="M9.5 17.5L8.5 8H24L23.5 11H11.5L12 14.5H23L22 24L16 26L10 24L9.5 19H12.5L13 21.5L16 22.5L19 21.5L19.5 17.5H9.5Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+        <div class="css">
+          <svg
+            width="100px"
+            height="100px"
+            viewBox="0 0 32 32"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path d="M6 28L4 3H28L26 28L16 31L6 28Z" fill="#1172B8" />
+            <path d="M26 5H16V29.5L24 27L26 5Z" fill="#33AADD" />
+            <path
+              d="M19.5 17.5H9.5L9 14L17 11.5H9L8.5 8.5H24L23.5 12L17 14.5H23L22 24L16 26L10 24L9.5 19H12.5L13 21.5L16 22.5L19 21.5L19.5 17.5Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+        <div class="js">
+          <svg
+            fill="none"
+            height="100px"
+            width="100px"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 124 141.53199999999998"
+          >
+            <path
+              d="M10.383 126.894L0 0l124 .255-10.979 126.639-50.553 14.638z"
+              fill="#e9ca32"
+            />
+            <path d="M62.468 129.277V12.085l51.064.17-9.106 104.851z" fill="#ffde25" />
+            <g fill="#fff">
+              <path
+                d="M57 26H43.5v78L33 102V91.5l-12.5-2V113l36.5 9.5zM67.127 26H104.5L102 40.95H81.394v24.533H102L99.5 115l-32.373 7.5V107L89 99.5 90.263 79l-23.136 3.35z"
+              />
+            </g>
+          </svg>
+        </div>
+      </div>
     </div>
     <div class="back">
       <img src="<%=member.avatar%>" alt="" />
+      <article><%=member.html%></article>
+      <div class="bio_open">
+        <div class="bio">
+          <p><%=member.bio.html%></p>
+        </div>
+      </div>
     </div>
   </div>
 </div>
 
 <svg
+  id="button"
   fill="#15616d"
   width="50px"
   height="50px"
