--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,7 +72,7 @@
       <article><%=member.html%></article>
       <div class="bio_open">
         <div class="bio">
-          <p><%=member.bio.html%></p>
+          <p><%-member.bio.html%></p>
         </div>
       </div>
     </div>
