--- a/public/style.css
+++ b/public/style.css
@@ -75,9 +75,10 @@ body {
 }
 
 .back img {
-  border-radius: 0.3rem;
-  width: 30%;
-  margin-left: 35%;
+  border-radius: 0.6rem 0.6rem 0 0;
+  width: 100%;
+  height: 15rem;
+  object-fit: cover;
 }
 
 .marquee {
@@ -126,8 +127,9 @@ body {
 
 .bio_open {
   width: 60%;
-  height: 25vh;
+  height: 40vh;
   margin: 0 auto;
+  margin-top: 2rem;
   position: relative;
   background-color: #001524;
   border-radius: 0.6rem;
@@ -138,8 +140,8 @@ body {
   color: var(--background-color-two);
   background-color: #15616d;
   border-radius: 0.6rem;
-  width: 60%;
-  height: 25vh;
+  width: 100%;
+  height: 40vh;
   overflow-y: scroll;
   padding: 0.5rem;
 }
