--- a/public/style.css
+++ b/public/style.css
@@ -161,3 +161,25 @@ body {
     transform: translate(-100%, 0);
   }
 }
+
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+    margin-top: 1rem;
+    top: 0;
+  }
+
+  #button {
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 1rem;
+  }
+
+  .bio_open {
+    height: 30vh;
+  }
+
+  .bio {
+    height: 30vh;
+  }
+}
